# covscript-3.5

./: .gitignore  .gitmodules  CMakeLists.txt  Design.md  README.md  gen_ir.csc  gen_visitor.csc  minimal.csc  minparser.csp  minparser.ecs  minparser_visitor.csp
include/covscript/common/: platform.hpp
include/covscript/compiler/: binary_tree.hpp  compiler.hpp  symbols.hpp
include/covscript/context/: context.hpp
include/covscript/runtime/: codegen.hpp  context.hpp  instance.hpp  memory.hpp  op_parser.hpp  statement.hpp
include/covscript/types/: basic.hpp  exception.hpp  numeric.hpp  stack.hpp  string.hpp  support.hpp  types.hpp  variable.hpp  xtra_impl.cpp  xtra_var.cpp
include/csvm/common/: platform.hpp
include/csvm/context/: context.hpp  memory.hpp
include/csvm/types/: basic.hpp  exception.hpp  numeric.hpp  string.hpp  support.hpp  types.hpp  variable.hpp  xtra_impl.cpp
sources/context/: memory.cpp
sources/runtime/: memory.cpp
sources/types/: string.cpp  variable.cpp
tests/cpp/: CMakeLists.txt  bytecode.cpp  numeric.cpp  stack.cpp  string.cpp  var-perf.cpp  variable.cpp
